@startuml database-physical-scan
allowmixing

skinparam shadowing false
skinparam roundcorner 0
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam defaultFontSize 10
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam entity { BackgroundColor #FEFECE BorderColor black }
skinparam queue { BackgroundColor white BorderColor black }
skinparam cloud { BackgroundColor white BorderColor black }
skinparam note { BackgroundColor #FFFFCC BorderColor black }

title Физическая модель — scan-service (опциональное хранение истории)

hide circle
hide methods

entity "users (auth-service)\n<<external>>" as users_ext #DDDDDD {
  * **id** : UUID <<PK>>
}

entity "user-service\n<<external>>" as user_ext #DDDDDD {
  * **REST via Feign** : GET /api/user/info
}

cloud "GigaChat Vision\n<<external>>" as giga

entity "scan_history" as hist {
  * **id** : BIGSERIAL <<PK>>
  --
  * user_id : UUID <<NOT NULL>>
  * scan_date : TIMESTAMP
  image_file_name : VARCHAR
  risk_level : VARCHAR(20)
  analysis_result : JSONB
  ..
  idx_scan_history_user_id (user_id)
}

queue "Kafka: scan-ai-requests" as kafka_req
queue "Kafka: scan-ai-results" as kafka_res

users_ext ||..o{ hist : "user_id"
user_ext ..> hist : "UserProfile для анализа"
giga ..> hist : "ScanAnalysisResult"

hist ..> kafka_req : ScanAiKafkaMessage
kafka_req ..> giga : vision (image <= 400 KB)
giga ..> kafka_res : optional publish
hist ..> giga : fallback direct call

note right of hist
  JPA @Entity ScanHistory.
  SCAN_PERSISTENCE_ENABLED=false:
  InMemoryScanHistoryStore (без таблицы).
  Изображение не сохраняется.
end note

note bottom of user_ext
  allergies[], chronicDiseases[]
  через gateway:
  X-User-Id, X-Internal-Gateway-Token
end note

note bottom of kafka_req
  SCAN_KAFKA_ENABLED=false по умолчанию.
  POST /scans/analyze — multipart image
end note

@enduml
